--- a/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
+++ b/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
@@ -32,9 +32,11 @@
   <ItemGroup>
     <Compile Include="Dumpers\AssistantDumper.cs" />
     <Compile Include="Dumpers\AssociationDumper.cs" />
+    <Compile Include="Dumpers\BaseDumper.cs" />
     <Compile Include="Dumpers\BookTypesDumper.cs" />
     <Compile Include="Dumpers\ColourTypesDumper.cs" />
     <Compile Include="Dumpers\ComplexBuiltinsDumper.cs" />
+    <Compile Include="Dumpers\Descendant1Dumper.cs" />
     <Compile Include="Dumpers\NoPropertiesDumper.cs" />
     <Compile Include="Dumpers\OnePropertyDumper.cs" />
     <Compile Include="Dumpers\Package1\AssociationInPackageDumper.cs" />
@@ -47,9 +49,11 @@
     <Compile Include="Dumpers\PrimitiveBuiltinsDumper.cs" />
     <Compile Include="SequenceGenerators\AssistantSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\AssociationSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\BaseSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\BookTypesSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ColourTypesSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ComplexBuiltinsSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\Descendant1SequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\NoPropertiesSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\OnePropertySequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\Package1\AssociationInPackageSequenceGenerator.cs" />
@@ -61,9 +65,11 @@
     <Compile Include="SequenceGenerators\Package1\ShapeTypesSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\PrimitiveBuiltinsSequenceGenerator.cs" />
     <Compile Include="Types\Association.cs" />
+    <Compile Include="Types\Base.cs" />
     <Compile Include="Types\BookTypes.cs" />
     <Compile Include="Types\ColourTypes.cs" />
     <Compile Include="Types\ComplexBuiltins.cs" />
+    <Compile Include="Types\Descendant1.cs" />
     <Compile Include="Types\MyException.cs" />
     <Compile Include="Types\NoProperties.cs" />
     <Compile Include="Types\OneProperty.cs" />
