test models: start work on inheritance with properties scenario
- add scenario elements to C# test model

--- a/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
+++ b/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
@@ -34,6 +34,8 @@
     <Compile Include="Dumpers\AssociationDumper.cs" />
     <Compile Include="Dumpers\BaseDumper.cs" />
     <Compile Include="Dumpers\BookTypesDumper.cs" />
+    <Compile Include="Dumpers\ChildOfAChild1Dumper.cs" />
+    <Compile Include="Dumpers\ChildOfAChild2Dumper.cs" />
     <Compile Include="Dumpers\ColourTypesDumper.cs" />
     <Compile Include="Dumpers\ComplexBuiltinsDumper.cs" />
     <Compile Include="Dumpers\Descendant1Dumper.cs" />
@@ -50,11 +52,16 @@
     <Compile Include="Dumpers\Package1\Class4Dumper.cs" />
     <Compile Include="Dumpers\Package1\Class5Dumper.cs" />
     <Compile Include="Dumpers\Package1\ShapeTypesDumper.cs" />
+    <Compile Include="Dumpers\ParentWithMembersDumper.cs" />
     <Compile Include="Dumpers\PrimitiveBuiltinsDumper.cs" />
+    <Compile Include="Dumpers\SecondChildWithoutMembersDumper.cs" />
+    <Compile Include="Dumpers\ThirdChildWithMembersDumper.cs" />
     <Compile Include="SequenceGenerators\AssistantSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\AssociationSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\BaseSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\BookTypesSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\ChildOfAChild1SequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\ChildOfAChild2SequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ColourTypesSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ComplexBuiltinsSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\Descendant1SequenceGenerator.cs" />
@@ -71,10 +78,15 @@
     <Compile Include="SequenceGenerators\Package1\Class4SequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\Package1\Class5SequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\Package1\ShapeTypesSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\ParentWithMembersSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\PrimitiveBuiltinsSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\SecondChildWithoutMembersSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\ThirdChildWithMembersSequenceGenerator.cs" />
     <Compile Include="Types\Association.cs" />
     <Compile Include="Types\Base.cs" />
     <Compile Include="Types\BookTypes.cs" />
+    <Compile Include="Types\ChildOfAChild1.cs" />
+    <Compile Include="Types\ChildOfAChild2.cs" />
     <Compile Include="Types\ColourTypes.cs" />
     <Compile Include="Types\ComplexBuiltins.cs" />
     <Compile Include="Types\Descendant1.cs" />
@@ -93,7 +105,10 @@
     <Compile Include="Types\Package1\Class4.cs" />
     <Compile Include="Types\Package1\Class5.cs" />
     <Compile Include="Types\Package1\ShapeTypes.cs" />
+    <Compile Include="Types\ParentWithMembers.cs" />
     <Compile Include="Types\PrimitiveBuiltins.cs" />
+    <Compile Include="Types\SecondChildWithoutMembers.cs" />
+    <Compile Include="Types\ThirdChildWithMembers.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
