test models: add inheritance in package scenario to c# test model

--- a/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
+++ b/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
@@ -53,6 +53,9 @@
     <Compile Include="Dumpers\Package1\Class4Dumper.cs" />
     <Compile Include="Dumpers\Package1\Class5Dumper.cs" />
     <Compile Include="Dumpers\Package1\ShapeTypesDumper.cs" />
+    <Compile Include="Dumpers\Package2\ChildDumper.cs" />
+    <Compile Include="Dumpers\Package2\ChildViaSettingsDumper.cs" />
+    <Compile Include="Dumpers\Package2\ParentDumper.cs" />
     <Compile Include="Dumpers\ParentWithMembersDumper.cs" />
     <Compile Include="Dumpers\PrimitiveBuiltinsDumper.cs" />
     <Compile Include="Dumpers\SecondChildWithoutMembersDumper.cs" />
@@ -80,6 +83,9 @@
     <Compile Include="SequenceGenerators\Package1\Class4SequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\Package1\Class5SequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\Package1\ShapeTypesSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\Package2\ChildSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\Package2\ChildViaSettingsSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\Package2\ParentSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ParentWithMembersSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\PrimitiveBuiltinsSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\SecondChildWithoutMembersSequenceGenerator.cs" />
@@ -108,6 +114,9 @@
     <Compile Include="Types\Package1\Class4.cs" />
     <Compile Include="Types\Package1\Class5.cs" />
     <Compile Include="Types\Package1\ShapeTypes.cs" />
+    <Compile Include="Types\Package2\Child.cs" />
+    <Compile Include="Types\Package2\ChildViaSettings.cs" />
+    <Compile Include="Types\Package2\Parent.cs" />
     <Compile Include="Types\ParentWithMembers.cs" />
     <Compile Include="Types\PrimitiveBuiltins.cs" />
     <Compile Include="Types\SecondChildWithoutMembers.cs" />
