test models: add inheritance inside/outside scenario to c# test model

--- a/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
+++ b/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
@@ -59,6 +59,9 @@
     <Compile Include="Dumpers\Package3\ParentDumper.cs" />
     <Compile Include="Dumpers\Package4\ChildDumper.cs" />
     <Compile Include="Dumpers\Package4\ChildViaSettingsDumper.cs" />
+    <Compile Include="Dumpers\Package5\ChildDumper.cs" />
+    <Compile Include="Dumpers\Package5\ChildViaSettingsDumper.cs" />
+    <Compile Include="Dumpers\ParentOutsideDumper.cs" />
     <Compile Include="Dumpers\ParentWithMembersDumper.cs" />
     <Compile Include="Dumpers\PrimitiveBuiltinsDumper.cs" />
     <Compile Include="Dumpers\SecondChildWithoutMembersDumper.cs" />
@@ -92,6 +95,9 @@
     <Compile Include="SequenceGenerators\Package3\ParentSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\Package4\ChildSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\Package4\ChildViaSettingsSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\Package5\ChildSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\Package5\ChildViaSettingsSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\ParentOutsideSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\ParentWithMembersSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\PrimitiveBuiltinsSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators\SecondChildWithoutMembersSequenceGenerator.cs" />
@@ -126,6 +132,9 @@
     <Compile Include="Types\Package3\Parent.cs" />
     <Compile Include="Types\Package4\Child.cs" />
     <Compile Include="Types\Package4\ChildViaSettings.cs" />
+    <Compile Include="Types\Package5\Child.cs" />
+    <Compile Include="Types\Package5\ChildViaSettings.cs" />
+    <Compile Include="Types\ParentOutside.cs" />
     <Compile Include="Types\ParentWithMembers.cs" />
     <Compile Include="Types\PrimitiveBuiltins.cs" />
     <Compile Include="Types\SecondChildWithoutMembers.cs" />
